apollo-router/src/spec/query/snapshots/apollo_router__spec__query__transform__tests__remove_directive-2.snap
---
source: apollo-router/src/spec/query/transform.rs
expression: "TestResult { query, result }"
---
query:

            query($a: String) {
                a(arg: $a) @remove
                c
            }
filtered:
{
  c
}
